--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,45 +1,54 @@
 <idea-plugin version="2">
-  <id>com.your.company.unique.plugin.id</id>
-  <name>ReactNativeTools</name>
-  <version>1.0</version>
-  <vendor email="smuyyh@gmail.com" url="https://github.com/smuyyh">PAX</vendor>
+    <id>com.your.company.unique.plugin.id</id>
+    <name>ReactNativeTools</name>
+    <version>1.0</version>
+    <vendor email="smuyyh@gmail.com" url="https://github.com/smuyyh">PAX</vendor>
 
-  <description><![CDATA[
+    <description><![CDATA[
       Enter short description for your plugin here.<br>
       <em>most HTML tags may be used</em>
     ]]></description>
 
-  <change-notes><![CDATA[
+    <change-notes><![CDATA[
       Add change notes here.<br>
       <em>most HTML tags may be used</em>
     ]]>
-  </change-notes>
+    </change-notes>
 
-  <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/build_number_ranges.html for description -->
-  <idea-version since-build="141.0"/>
+    <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/build_number_ranges.html for description -->
+    <idea-version since-build="141.0"/>
 
-  <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/plugin_compatibility.html
-       on how to target different products -->
-  <!-- uncomment to enable plugin in all products
-  <depends>com.intellij.modules.lang</depends>
-  -->
+    <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/plugin_compatibility.html
+         on how to target different products -->
+    <!-- uncomment to enable plugin in all products
+    <depends>com.intellij.modules.lang</depends>
+    -->
 
-  <extensions defaultExtensionNs="com.intellij">
-    <!-- Add your extensions here -->
-  </extensions>
+    <extensions defaultExtensionNs="com.intellij">
+        <!-- Add your extensions here -->
+    </extensions>
 
-  <actions>
+    <actions>
 
-    <action id="RunAndroidPlugin" class="com.yuyh.reactnative.RunAndroidPlugin" text="react-native run-android"
-            description="react-native run-android" icon="/icons/react.png">
-      <add-to-group group-id="MainToolBar" anchor="last"/>
-      <add-to-group group-id="ToolsMenu" anchor="last"/>
-    </action>
+        <group id="react" text="react-native" description="react-native tools" icon="/icons/group.png" popup="true">
 
-    <action id="DevMenuPlugin" class="com.yuyh.reactnative.DevMenuPlugin" text="ReactDevMenu"
-            description="adb shell input keyevent 82" icon="/icons/dev.png">
-      <add-to-group group-id="MainToolBar" anchor="last"/>
-    </action>
-  </actions>
+            <add-to-group group-id="ToolsMenu" anchor="first"/>
+
+            <action id="RunAndroidPlugin" class="com.yuyh.reactnative.RunAndroidPlugin" text="ReactRunAndroid"
+                    description="react-native run-android" icon="/icons/react.png">
+                <add-to-group group-id="MainToolBar" anchor="last"/>
+
+                <keyboard-shortcut first-keystroke="ctrl alt R" keymap="$default"/>
+            </action>
+
+            <action id="DevMenuPlugin" class="com.yuyh.reactnative.DevMenuPlugin" text="ReactDevMenu"
+                    description="adb shell input keyevent 82" icon="/icons/dev.png">
+                <add-to-group group-id="MainToolBar" anchor="last"/>
+
+                <keyboard-shortcut first-keystroke="ctrl alt D" keymap="$default"/>
+            </action>
+
+        </group>
+    </actions>
 
 </idea-plugin>
