新增 自定义执行命令行动作。

--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -56,7 +56,11 @@
 
             <separator/>
 
+            <action id="SendCommandPlugin" class="com.yuyh.reactnative.SendCommandPlugin" text="SendCommand"
+                    description="send command in terminal"/>
+
         </group>
+
     </actions>
 
 </idea-plugin>
